added a new mehran's function