@@ -5,6 +5,7 @@ import Model.Field.Tile;
 import Model.Units.Unit;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.regex.Matcher;
 
 public class MoveUnitController {
@@ -35,9 +36,9 @@ public class MoveUnitController {
     public static ArrayList<Tile> findPath(Tile startTile, Tile endTile, GameMap gameMap) {
         int mapSize = gameMap.getSize();
         boolean[][] visitedTiles = new boolean[mapSize][mapSize];
-        ArrayList<PathTile> queueTiles = new ArrayList<>();
+        LinkedList<PathTile> queueTiles = new LinkedList<>();
         PathTile currentPathTile = new PathTile(endTile, null);
-        queueTiles.add(currentPathTile);
+        queueTiles.addLast(currentPathTile);
 
         for (int i = 0; i < mapSize; i++) for (int j = 0; j < mapSize; j++) visitedTiles[i][j] = false;
         visitedTiles[endTile.getRowNum()][endTile.getColumnNum()] = true;
@@ -46,7 +47,7 @@ public class MoveUnitController {
         while (true) {
             for (Tile neigbour : currentPathTile.getTile().getNeighboursConnected()) {
                 if (!neigbour.equals(startTile) && !visitedTiles[neigbour.getRowNum()][neigbour.getColumnNum()]) {
-                    queueTiles.add(new PathTile(neigbour, currentPathTile));
+                    queueTiles.addLast(new PathTile(neigbour, currentPathTile));
                 } else if (neigbour.equals(startTile)) {
                     currentPathTile = new PathTile(neigbour, currentPathTile);
                     break search;
@@ -67,12 +68,12 @@ public class MoveUnitController {
         return path;
     }
 
-    public ArrayList<Tile> manhattanCloseTiles(int distance, Tile tile, GameMap gameMap) {
+    public static ArrayList<Tile> manhattanCloseTiles(int distance, Tile tile, GameMap gameMap) {
         int mapSize = gameMap.getSize();
         boolean[][] visitedTiles = new boolean[mapSize][mapSize];
-        ArrayList<PathTile> queueTiles = new ArrayList<>();
+        LinkedList<PathTile> queueTiles = new LinkedList<>();
         PathTile currentPathTile = new PathTile(tile, null);
-        queueTiles.add(currentPathTile);
+        queueTiles.addLast(currentPathTile);
 
         for (int i = 0; i < mapSize; i++) for (int j = 0; j < mapSize; j++) visitedTiles[i][j] = false;
         visitedTiles[tile.getRowNum()][tile.getColumnNum()] = true;
@@ -82,18 +83,61 @@ public class MoveUnitController {
         while (currentDistances < distance) {
             for (Tile neigbour : currentPathTile.getTile().getNeighboursConnected()) {
                 if (!visitedTiles[neigbour.getRowNum()][neigbour.getColumnNum()]) {
-                    queueTiles.add(new PathTile(neigbour, currentPathTile));
+                    queueTiles.addLast(new PathTile(neigbour, currentPathTile));
                     answer.add(neigbour);
                 }
             }
             if (queueTiles.size() == 0) break;
-            currentPathTile = queueTiles.get(0);
-            queueTiles.remove(0);
+            currentPathTile = queueTiles.getFirst();
+            queueTiles.removeFirst();
             currentDistances++;
         }
         return answer;
     }
 
+
+
+    public static ArrayList<Tile> closeTilesForAttack(int distance, Tile tile, GameMap gameMap) {
+        int mapSize = gameMap.getSize();
+        boolean[][] visitedTiles = new boolean[mapSize][mapSize];
+        LinkedList<Tile> queueTiles = new LinkedList<>();
+        Tile currentTile = tile;
+        queueTiles.addLast(tile);
+
+        for (int i = 0; i < mapSize; i++) for (int j = 0; j < mapSize; j++) visitedTiles[i][j] = false;
+        visitedTiles[tile.getRowNum()][tile.getColumnNum()] = true;
+        int currentDistances = 1;
+        ArrayList<Tile> answer = new ArrayList<>();
+
+        while (currentDistances < distance) {
+            int xCurrent = currentTile.getRowNum();
+            int yCurrent = currentTile.getColumnNum();
+
+            if (xCurrent - 1 >= 0 && !visitedTiles[xCurrent - 1][yCurrent]) {
+                queueTiles.addLast(gameMap.getMap()[xCurrent - 1][yCurrent]);
+                answer.add(gameMap.getMap()[xCurrent - 1][yCurrent]);
+            }
+            if (xCurrent + 1 < gameMap.getSize() && !visitedTiles[xCurrent + 1][yCurrent]) {
+                queueTiles.addLast(gameMap.getMap()[xCurrent + 1][yCurrent]);
+                answer.add(gameMap.getMap()[xCurrent + 1][yCurrent]);
+            }
+            if (yCurrent - 1 >= 0 && !visitedTiles[xCurrent][yCurrent - 1]) {
+                queueTiles.addLast(gameMap.getMap()[xCurrent][yCurrent - 1]);
+                answer.add(gameMap.getMap()[xCurrent][yCurrent - 1]);
+            }
+            if (xCurrent + 1 < gameMap.getSize() && !visitedTiles[xCurrent][yCurrent + 1]) {
+                queueTiles.addLast(gameMap.getMap()[xCurrent][yCurrent + 1]);
+                answer.add(gameMap.getMap()[xCurrent][yCurrent + 1]);
+            }
+            
+            if (queueTiles.size() == 0) break;
+            currentTile = queueTiles.getFirst();
+            queueTiles.removeFirst();
+            currentDistances++;
+        }
+        return answer;
+    }
+    
     public boolean checkIfImpossibleDestination(int x, int y) {
         return false;
     }
